smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/no-newline-after-metadata.smithy
// Parse error at line 3, column 22 near `metadata`: Expected a line break | Model
$version: "2.0"
metadata foo = "bar" metadata baz = "bar"
